--- a/.github/workflows/litefs_workflow.yaml
+++ b/.github/workflows/litefs_workflow.yaml
@@ -1,24 +1,12 @@
 name: GitHub Actions Demo
-run-name: LiteFS
+run-name: LiteFS Workflow
 on: [push]
 jobs:
-  test:
-    runs-on: [self-hosted, ubuntu-latest]
+  tests:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: "Dockerfile.test"
-          tags: litefs:latest
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          push: false
-      - name: Run LiteFS Tests
-        uses: addnab/docker-run-action@v3
-        with:
-          image: litefs:latest
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build -t litefs:latest .
+      - name: Run the Docker image
+        run: docker run -a=STDOUT -a=STDERR -t -i litefs:latest
